Edit clock icon style in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,6 +115,11 @@ footer a:hover {
     font-weight: 100;
 }
 
+.prep-time {
+    float: left; 
+    padding-right: 5px;  
+}
+
 
 
 /* ------------ have to amend in media query */ 
