--- a/templates/base.html
+++ b/templates/base.html
@@ -86,16 +86,16 @@
                     </div>
                     <!-- Social Media links -->
                     <div>
-                        <a href="https://www.facebook.com" class="social" target="_blank">
+                        <a href="https://www.facebook.com" class="social" target="_blank" rel="noopener">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="hhtps://www.instagram.com" class="social" target="_blank">
+                        <a href="hhtps://www.instagram.com" class="social" target="_blank" rel="noopener">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.twitter.com" class="social" target="_blank">
+                        <a href="https://www.twitter.com" class="social" target="_blank" rel="noopener">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://www.pinterest.com" class="social" target="_blank">
+                        <a href="https://www.pinterest.com" class="social" target="_blank" rel="noopener">
                             <i class="fab fa-pinterest"></i>
                         </a>
                     </div>
