--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                         <p><strong>Lakeland cookware</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.lakeland.co.uk/shop/cooking" target="_blank"><strong>View here</strong></a>
+                        <a href="https://www.lakeland.co.uk/shop/cooking" target="_blank" rel="noopener"><strong>View here</strong></a>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         <p><strong>John Lewis</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.johnlewis.com/home-garden/cooking-baking/c600001134" target="_blank"><strong>Shop now</strong></a>
+                        <a href="https://www.johnlewis.com/home-garden/cooking-baking/c600001134" target="_blank" rel="noopener"><strong>Shop now</strong></a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         <p><strong>Ikea kitchenware</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.ikea.com/gb/en/cat/cookware-kt003/" target="_blank"><strong>Browse</strong></a>
+                        <a href="https://www.ikea.com/gb/en/cat/cookware-kt003/" target="_blank" rel="noopener"><strong>Browse</strong></a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                         <p><strong>Dunelm Cook & Dine</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.dunelm.com/category/home-and-furniture/cook-and-dine" target="_blank"><strong>Take a look</strong></a>
+                        <a href="https://www.dunelm.com/category/home-and-furniture/cook-and-dine" target="_blank" rel="noopener"><strong>Take a look</strong></a>
                     </div>
                 </div>
             </div>
