--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -4,7 +4,7 @@
 
         <div class="row recipeHeader">
             <div class="col s12 m6 l4">
-                <img src="{{ recipe.image_url }}" id="page-image">
+                <img src="{{ recipe.image_url }}" id="page-image" alt="{{ recipe.recipe_name }}">
             </div>
             <div class="col s12 m6 l8">
                 <h1>{{ recipe.recipe_name }}</h1>
