--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -39,7 +39,7 @@
                             <div class="card-content">
                                 <p class="card-title"><strong>{{ recipe.recipe_name }}</strong></p>
                                 <div>
-                                    <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
+                                    <i class="fas fa-clock prep-time"></i>
                                     <p>{{ recipe.prep_time }}</p>
                                 </div>
                                 {% for tag in recipe.tags %}
