--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
     {% block content %}
+        <!-- 404 Error page -->
         <h1>Oops...</h1>
         <p>Something went wrong and the page you were looking for is no longer available, want to go to the main <a href="{{ url_for('get_recipes') }}">recipes page</a>?</p>
         <p>If you're interested the reason was:</p>
