--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -2,7 +2,6 @@
 
 {% block content %}
     <h3 class="center-align">Create recipe</h3>
-
     <div class="row">
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
             <!-- Recipe name input -->
@@ -38,7 +37,7 @@
                     <label for="prep_time">Prep time Eg. 1 hour 30 minutes</label>
                 </div>
             </div>
-            <!-- Recipe type tags / this are not required like the other fields by the user -->
+            <!-- Recipe type tags -->
             <div class="row">
                 <div class="col s12 input-field" >
                     <i class="fas fa-tags prefix"></i>
@@ -46,7 +45,7 @@
                     <label for="tags">Type keywords (separated by a comma). Eg. Italian or Snack, Brunch. These will appear as tags.</label>
                 </div>
             </div>
-            <!-- Recipe image -->
+            <!-- Recipe image request a URL from user -->
             <div class="row">
                 <div class="col s12 input-field">
                     <i class="fas fa-image prefix"></i>
@@ -64,7 +63,4 @@
             </div>
         </form>
     </div>
-
-    
-        
 {% endblock %}
