--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,11 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-   {% block styles %}
-   {% endblock %}
+    {% block styles %}
+    {% endblock %}
     <title>Recipes</title>
 </head>
 <body>
-
     <header>
         <!-- Main Desktop nav bar menu -->
         <div class="navbar-fixed">
@@ -35,24 +34,23 @@
             </nav>
         </div>
         <!-- Side menu for mobile and tablet devices-->
-            <ul class="sidenav" id="mobile-demo">
-                <li><h4 class="center-align">cogi</h4></li>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                    {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
-                        <li><a href="{{ url_for('add_recipe') }}">Add recipe</a></li>
-                        <li><a href="{{ url_for('logout') }}">Log out</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('register') }}">Register</a></li>
-                        <li><a href="{{ url_for('login') }}">Log in</a></li>
-                    {% endif %}
-                <li><a class="sidenav-close" href="#!"><i class="fas fa-times"></i></a></li>
-            </ul>
-
+        <ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align">cogi</h4></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
+                <li><a href="{{ url_for('add_recipe') }}">Add recipe</a></li>
+                <li><a href="{{ url_for('logout') }}">Log out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+                <li><a href="{{ url_for('login') }}">Log in</a></li>
+            {% endif %}
+            <li><a class="sidenav-close" href="#!"><i class="fas fa-times"></i></a></li>
+        </ul>
     </header>
 
+    <!-- Flash messages -->
     <section>
-        <!-- Flash messages -->
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
@@ -64,6 +62,7 @@
         {% endwith %}
     </section>
     
+    <!-- Main content for each template -->
     <main class="container">
         {% block content %}
         {% endblock %}
@@ -72,38 +71,38 @@
     <footer>
         <div class="row fadeIn">
             <div class="col s12 center-align">
-                    <h5>&#169; COGI 2021</h5>
-                    <!-- Address and contact information-->
-                    <div>
-                        <a href="mailto:cogi@gmail.com"><i class="fa fa-envelope-open icon"></i><span class="contactLinks">
-                                Email</span></a><br>
-                        <a href="02921 887 276"><i class="fa fa-phone icon"></i><span class="contactLinks"> Phone</span></a><br>
-                        <address>
-                            12 St Marys Street<br>
-                            Cardiff<br>
-                            South Wales
-                        </address>
-                    </div>
-                    <!-- Social Media links -->
-                    <div>
-                        <a href="https://www.facebook.com" class="social" target="_blank" rel="noopener">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="hhtps://www.instagram.com" class="social" target="_blank" rel="noopener">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.twitter.com" class="social" target="_blank" rel="noopener">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="https://www.pinterest.com" class="social" target="_blank" rel="noopener">
-                            <i class="fab fa-pinterest"></i>
-                        </a>
-                    </div>
+                <h5>&#169; COGI 2021</h5>
+                <!-- Address and contact information-->
+                <div>
+                    <a href="mailto:cogi@gmail.com"><i class="fa fa-envelope-open icon"></i><span class="contactLinks">
+                            Email</span></a><br>
+                    <a href="02921 887 276"><i class="fa fa-phone icon"></i><span class="contactLinks"> Phone</span></a><br>
+                    <address>
+                        12 St Marys Street<br>
+                        Cardiff<br>
+                        South Wales
+                    </address>
+                </div>
+                <!-- Social Media links -->
+                <div>
+                    <a href="https://www.facebook.com" class="social" target="_blank" rel="noopener">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="hhtps://www.instagram.com" class="social" target="_blank" rel="noopener">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.twitter.com" class="social" target="_blank" rel="noopener">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.pinterest.com" class="social" target="_blank" rel="noopener">
+                        <i class="fab fa-pinterest"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
 
-    
+    <!-- Javascript links -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
