--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -2,7 +2,6 @@
 
 {% block content %}
     <h3 class="center-align">Update recipe</h3>
-
     <div class="row">
         <form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
             <!-- Recipe name input -->
@@ -54,7 +53,7 @@
                     <label for="tags">Type keywords (separated by a comma). Eg. Italian or Snack, Brunch. These will appear as tags.</label>
                 </div>
             </div>
-            <!-- Recipe image -->
+            <!-- Recipe image request URL -->
             <div class="row">
                 <div class="input-field col s12" >
                     <i class="fas fa-image prefix"></i>
@@ -62,16 +61,18 @@
                     <label for="image_url">Please insert a whole image url.</label>
                 </div>
             </div>
-            <!-- Submit button to update recipe -->
+            <!-- Buttons to update recipe -->
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- Cancel update recipe button -->
                     <a href="{{ url_for('profile', username=session['user']) }}" class="btn-large red">
                         Cancel <i class="fas fa-times right"></i>
                     </a>
+                    <!-- Delete recipe button -->
                     <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" onclick="return confirm('Are you sure you want to delete this recipe?');" class="btn-large">
                         Delete <i class="fas fa-times right"></i>
                     </a>
+                    <!-- Update recipe button -->
                     <button class="btn waves-effect waves-light" type="submit">Update recipe
                         <i class="fas fa-edit right"></i>
                     </button>
