--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,6 @@
     {% block content %}
 
     <h3 class="center-align">Log in</h3>
-
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
@@ -35,6 +34,7 @@
         </form>
     </div>
 
+    <!-- Link to register if not already -->
     <div class="row">
         <div class="col s12">
             <p class="center-align">New here?
