--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,7 @@
 
     {% block content %}
 
+    <!-- Username title -->
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
@@ -12,40 +13,45 @@
         </div>
     </div>
 
-            <div class="row">
-                <div class="col s12 m4 create-recipe">
-                        <a href="{{ url_for('add_recipe') }}">
-                            <i class="fas fa-plus"></i>  
-                            <p><strong>Add new recipe</strong></p>
-                        </a>
-                </div>
-                {% for recipe in recipes %}
-                    {% if session.user|lower == recipe.created_by|lower %}
-                        <div class="col s12 m4">
-                            <a href="{{ url_for('recipe', recipe_id=recipe._id) }}">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }}">
-                                </div>
-                                <div class="card-content">
-                                    <p class="card-title"><strong>{{ recipe.recipe_name }}</strong></p>
-                                    <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
-                                    <p>{{ recipe.prep_time }}</p>
-                                    <div>
-                                        {% for tag in recipe.tags %}
-                                            {% if loop.index < 3 %}
-                                                <div class="chip">
-                                                    {{ tag }}
-                                                </div>
-                                            {% endif %} 
-                                        {% endfor %}
-                                    </div>
+    <!-- Recipes -->
+    <div class="row">
+        <!-- Add recipe button -->
+        <div class="col s12 m4 create-recipe">
+            <a href="{{ url_for('add_recipe') }}">
+                <i class="fas fa-plus"></i>  
+                <p><strong>Add new recipe</strong></p>
+            </a>
+        </div>
+        <!-- Recipes only created by the logged in user shown in cards -->
+        {% for recipe in recipes %}
+            {% if session.user|lower == recipe.created_by|lower %}
+                <div class="col s12 m4">
+                    <!-- Link to recipe page -->
+                    <a href="{{ url_for('recipe', recipe_id=recipe._id) }}">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }}">
+                            </div>
+                            <div class="card-content">
+                                <p class="card-title"><strong>{{ recipe.recipe_name }}</strong></p>
+                                <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
+                                <p>{{ recipe.prep_time }}</p>
+                                <!-- Recipe tags only two max per card due to size and layout -->
+                                <div>
+                                    {% for tag in recipe.tags %}
+                                        {% if loop.index < 3 %}
+                                            <div class="chip">
+                                                {{ tag }}
+                                            </div>
+                                        {% endif %} 
+                                    {% endfor %}
                                 </div>
                             </div>
-                            </a>
                         </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
+                    </a>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
   
     {% endblock %}
