--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -2,70 +2,74 @@
 
     {% block content %}
 
-        <div class="row recipeHeader">
-            <div class="col s12 m6 l4">
-                <img src="{{ recipe.image_url }}" id="page-image" alt="{{ recipe.recipe_name }}">
-            </div>
-            <div class="col s12 m6 l8">
-                <h1>{{ recipe.recipe_name }}</h1>
-                {% for tag in recipe.tags %}
-                    <div class="chip">
-                        {{ tag }}
-                    </div>
-                {% endfor %}
-                <i class="fas fa-clock" id="recipe-time"></i>
-                <p id="prep-time">{{ recipe.prep_time }}</p>
-            </div>
+    <div class="row recipeHeader">
+        <!-- Recipe image -->
+        <div class="col s12 m6 l4">
+            <img src="{{ recipe.image_url }}" id="page-image" alt="{{ recipe.recipe_name }}">
         </div>
-
-        <div class="row">
-            <div class="col s12 m6">
-                <h3>Ingredients</h3>
-                <p style="white-space: pre-wrap;">{{ recipe.ingredients }}</p>
-            </div>
-            <div class="col s12 m6">
-                <h3>Method</h3>
-                <p style="white-space: pre-wrap;">{{ recipe.method }}</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12">
-                <p>Recipe submitted by: {{ recipe.created_by }}</p>
-            </div>
-        </div>
-
-        {% if session.user|lower == recipe.created_by|lower %}
-            <div class="row">
-                <div class="col s12 center-align">
-                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red darken-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete Recipe</a>
+        <div class="col s12 m6 l8">
+            <!-- Recipe title and tags -->
+            <h1>{{ recipe.recipe_name }}</h1>
+            {% for tag in recipe.tags %}
+                <div class="chip">
+                    {{ tag }}
                 </div>
-            </div>
-        {% endif %}
-
+            {% endfor %}
+            <!-- Cooking time -->
+            <i class="fas fa-clock" id="recipe-time"></i>
+            <p id="prep-time">{{ recipe.prep_time }}</p>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Ingredients-->
+        <div class="col s12 m6">
+            <h3>Ingredients</h3>
+            <p style="white-space: pre-wrap;">{{ recipe.ingredients }}</p>
+        </div>
+        <!-- Method -->
+        <div class="col s12 m6">
+            <h3>Method</h3>
+            <p style="white-space: pre-wrap;">{{ recipe.method }}</p>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Recipe creator -->
+        <div class="col s12">
+            <p>Recipe submitted by: {{ recipe.created_by }}</p>
+        </div>
+    </div>
+    <!-- If logged in user is recipe creator, edit and delete butttons visable-->
+    {% if session.user|lower == recipe.created_by|lower %}
         <div class="row">
-            <div class="col s12">
-                <form method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
-                    <div class="row">
-                        <div class="col s12 input-field">
-                            <label for="comment">Leave a comment</label>
-                            <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
-                            <button class="btn waves-effect waves-light light-green darken-1" type="submit">Publish</button>
-                        </div>
-                    </div>
-                </form>
+            <div class="col s12 center-align">
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red darken-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete Recipe</a>
             </div>
         </div>
-
-        {% for comment in comments %}
-            <div>
-                <p><strong id="commentUser">{{ comment.created_by }}</strong> - <em>{{ comment.posted }}</em></p>
-                <p>{{ comment.comment }}</p>
-            </div>
-            {% if loop.index != loop.length %}
-                <div class="divider"></div>
-            {% endif %}
-        {% endfor %}
+    {% endif %}
+    <!-- Comment input field -->
+    <div class="row">
+        <div class="col s12">
+            <form method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
+                <div class="row">
+                    <div class="col s12 input-field">
+                        <label for="comment">Leave a comment</label>
+                        <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
+                        <button class="btn waves-effect waves-light light-green darken-1" type="submit">Publish</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- Comments -->
+    {% for comment in comments %}
+        <div>
+            <p><strong id="commentUser">{{ comment.created_by }}</strong> - <em>{{ comment.posted }}</em></p>
+            <p>{{ comment.comment }}</p>
+        </div>
+        {% if loop.index != loop.length %}
+            <div class="divider"></div>
+        {% endif %}
+    {% endfor %}
 
     {% endblock %}
