--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,6 @@
     {% block content %}
 
     <h3 class="center-align">Registration</h3>
-
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register' )}}">
             <div class="card-panel">
@@ -34,7 +33,7 @@
             </div>
         </form>
     </div>
-
+    <!-- Link to log in if already registered -->
     <div class="row">
         <div class="col s12">
             <p class="center-align">Already have an account?
