--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -56,7 +56,7 @@
             <!-- Submit button to create recipe -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button class="btn waves-effect waves-light" type="submit">Create recipe
+                    <button class="btn-large waves-effect waves-light" type="submit">Create recipe
                         <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
