--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -42,8 +42,14 @@
     {% if session.user|lower == recipe.created_by|lower %}
         <div class="row">
             <div class="col s12 center-align">
-                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red darken-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete Recipe</a>
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                    Edit Recipe
+                    <i class="fas fa-edit right"></i>
+                </a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large red darken-4" onclick="return confirm('Are you sure you want to delete this recipe?');">
+                    Delete Recipe
+                    <i class="fas fa-times right"></i>
+                </a>
             </div>
         </div>
     {% endif %}
@@ -55,7 +61,10 @@
                     <div class="col s12 input-field">
                         <label for="comment">Leave a comment</label>
                         <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
-                        <button class="btn waves-effect waves-light light-green darken-1" type="submit">Publish</button>
+                        <button class="btn-large waves-effect waves-light light-green darken-1" type="submit">
+                            Publish
+                            <i class="fas fa-plus-square right"></i>
+                        </button>
                     </div>
                 </div>
             </form>
