--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -54,7 +54,7 @@
         </div>
     {% endif %}
     <!-- Comment input field -->
-    <div class="row">
+    <div class="row comment">
         <div class="col s12">
             <form method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
                 <div class="row">
