Add style to log in and register headers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,6 +111,11 @@ body {
     color: #fff;
 }
 
+/*  ---------------------- * Registration page */ 
+
+.signIn {
+    padding: 30px 0px;
+}
 
 /*  ---------------------- * Recipe cards and results */ 
 
