--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
     {% block content %}
 
-    <h3 class="center-align">Log in</h3>
+    <h3 class="center-align signIn">Log in</h3>
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
