--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
     {% block content %}
 
-    <h3 class="center-align">Registration</h3>
+    <h3 class="center-align signIn">Registration</h3>
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register' )}}">
             <div class="card-panel">
