--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,12 @@ body {
     padding: 30px 0px;
 }
 
+/*  ---------------------- * Profile */ 
+
+.welcome {
+    font-size: 2rem;
+}
+
 /*  ---------------------- * Recipe cards and results */ 
 
 .search {
@@ -232,6 +238,10 @@ footer a:hover {
     #homePageImage {
         width: 100vw;
         height: auto;
+    }
+
+    .welcome {
+        font-size: 2.5rem;
     }
 
     
