--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,7 @@ body {
     padding: 30px 0px;
 }
 
+
 /*  ---------------------- * Recipe cards and results */ 
 
 .search {
@@ -220,6 +221,16 @@ footer a:hover {
 
 
 /*  ---------------------- # Media queries */
+
+/*  Small devices (Mobiles) */ 
+
+@media (max-width: 760px) {
+
+    textarea.materialize-textarea#ingredients {
+        height: 100px;
+    }
+
+}
 
 /*  Medium devices (Tablets, 768px and up) */ 
 
